syntax = "proto3";

package com.streamalyze.ratings.v1;

option java_multiple_files = true;
option java_package = "com.streamalyze.ratings.v1";
option java_outer_classname = "RatingsServiceProto";

import "google/protobuf/timestamp.proto";

message Rating {
  int64 id = 1;
  int64 user_id = 2;
  int64 movie_id = 3;
  double rating = 4;
  google.protobuf.Timestamp rated_at = 5;
}

message GetRatingsForMovieRequest {
  int64 movie_id = 1;
}

message GetRatingsForMovieResponse {
  repeated Rating ratings = 1;
}

message GetAverageRatingRequest {
  int64 movie_id = 1;
}

message GetAverageRatingResponse {
  int64 movie_id = 1;
  double average_rating = 2;
  int64 rating_count = 3;
}

service RatingsService {
  rpc GetRatingsForMovie(GetRatingsForMovieRequest) returns (GetRatingsForMovieResponse);
  rpc GetAverageRating(GetAverageRatingRequest) returns (GetAverageRatingResponse);
}
